--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development nodemon server.js",
+    "prod": " NODE_ENV=production nodemon server.js",
+    "test1": " NODE_ENV=testing nodemon server.js",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
