--- a/backend/Application_confirgration_dev.env
+++ b/backend/Application_confirgration_dev.env
@@ -1,3 +1,5 @@
 PORT=8685;
 NODE_ENV='development';
 MONGO_URL='mongodb+srv://arbazkhan:quiz123@cluster0.93jhu0b.mongodb.net/QuizAndBlog?retryWrites=true&w=majority'
+SECRET_KEY="SuperSecret"
+SALT_ROUND=10
